tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-expression.diagnostic
diagnostic error code=P0001 family=parser message="expected expression" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-expression.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-expression.ari" bytes=57
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-expression.ari" line=2 column=19 end_line=2 end_column=20 byte_start=37 byte_end=38 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-expression.ari:2:19\n   |\n 2 |   let value = 1 + ;\n   |                   ^"
